--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <title>D/Vide</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Chango|Seymour+One' rel='stylesheet' type='text/css'>
+    <style type="text/css" src="style.css">
+    </style>
   </head>
   <body>
     <header>
       <img src="info.png"/>
       <nav id="info">
         <ul>
-          <li> </li>
-          <li> </li>
-          <li> </li>
+          <li>About</li>
+          <li>Updates</li>
+          <li>Report Your Bugs!</li>
         </ul>
       </nav>
       <div>
@@ -26,9 +28,10 @@
       <img src="menu.png"/>
       <nav id="settings">
         <ul>
-          <li> </li>
-          <li> </li>
-          <li> </li>
+          <li>Pattern Options</li>
+          <li>Emergency Numbers</li>
+          <li>Patient Info</li>
+          <li>Calculator Lock</li>
         </ul>
       </nav>
     </header>
