added pictures, a little styling

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <title>D/Vide</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Chango|Seymour+One' rel='stylesheet' type='text/css'>
-    <style type="text/css" src="style.css">
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
-      <img src="info.png"/>
+      <img src="img/info.png"/>
       <nav id="info">
         <ul>
           <li>About</li>
@@ -19,13 +18,9 @@
         </ul>
       </nav>
       <div>
-        <h1>
-          <span class="dvide">d</span>
-          <span class="slash">/</span>
-          <span class="dvide">vide</span>
-        </h1>
+        <h1>d/vide</h1>
       </div>
-      <img src="menu.png"/>
+      <img src="img/menu.png"/>
       <nav id="settings">
         <ul>
           <li>Pattern Options</li>
@@ -38,7 +33,7 @@
 
     <section id="main">
       <div class="button">
-        <img src="sos.png" width="600" height="600" />
+        <img src="img/sos.png" width="600" height="600" />
       </div>
     </section>
 
